--- a/src/components/hazelbee/hero.css
+++ b/src/components/hazelbee/hero.css
@@ -1,7 +1,8 @@
 #bee-hero h1 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Happy Monkey';
+
     color: #40444b;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 #bee-hero p {
