--- a/src/components/hazellifestyle/collection.css
+++ b/src/components/hazellifestyle/collection.css
@@ -4,7 +4,7 @@
 }
 
 #lifestyle-about h2 {
-    font-family: 'League Spartan', sans-serif;
+    font-family: 'Happy Monkey';
     color: #d5b066;
     font-weight: 900;
 }
