--- a/src/components/hazellifestyle/hero.css
+++ b/src/components/hazellifestyle/hero.css
@@ -7,9 +7,10 @@
 }
 
 #lifestyle-hero h1 {
-    font-family: 'League Spartan', sans-serif;
+    font-family: 'Happy Monkey';
     color: #ffffff;
-    font-weight: 700;
+    font-weight: 900;
+
     text-shadow: 5px 10px 5px rgba(0, 0, 0, 0.25);
 }
 
