--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,16 @@ button:active,
         margin-top: 121px;
     }
 } */
+
+.currency {
+    border: none;
+    font-size: 12px;
+    color: #000;
+    letter-spacing: 0.2em;
+    width: 100px;
+    font-weight: 500;
+}
+
+footer .currency {
+    color: #5b5a5a;
+}
