--- a/src/components/hazelbabies/header.css
+++ b/src/components/hazelbabies/header.css
@@ -151,7 +151,6 @@ header .navbar-toggler:focus {
 
 #social-offcanvas {
     border-top: 1px solid #bfbfbf;
-    width: inherit;
 }
 
 #social-offcanvas a svg {
@@ -159,42 +158,15 @@ header .navbar-toggler:focus {
 }
 
 header .badge {
-    position: absolute;
-    top: 25%;
-    right: 30px;
+    top: -15%;
+    left: 60%;
     border: 2px solid #fff;
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 150ms;
     font-weight: 700;
     font-size: 15px;
-}
-
-@media (max-width: 600px) {
-    header .badge {
-        top: 27%;
-        /*  right: 0px;
-        padding: 7px 9px;
-        font-size: 15px;*/
-    }
-}
-
-@media (max-width: 400px) {
-    header .badge {
-        top: 20%;
-        /*  right: 0px;
-        padding: 7px 9px;
-        font-size: 15px;*/
-    }
-}
-
-@media (max-width: 350px) {
-    header .badge {
-        right: 15px;
-        /*padding: 7px 9px;
-        font-size: 15px;*/
-    }
 }
